--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 </head>
 
 <body>
+    <!--
+
     <img class="center-image" src="logo-ster.png" alt="logo">
 
     <div class="contact-box contact-h1">
@@ -26,6 +28,28 @@
             <textarea type="text" class="input-field textarea-field" placeholder="Je bericht"></textarea>
             <button type="button" class="btn">Verstuur</button>
         </form>
+    </div>
+
+    -->
+
+    <form id="fcf-form-id" class="fcf-form-class" method="post" action="contact-form-process.php">
+        <label for="Name" class="fcf-label">Your name</label>
+        <div class="fcf-input-group">
+            <input type="text" id="Name" name="Name" class="fcf-form-control" required>
+        </div>
+    <div class="fcf-form-group">
+        <label for="Email" class="fcf-label">Your email address</label>
+        <div class="fcf-input-group">
+            <input type="email" id="Email" name="Email" class="fcf-form-control" required>
+        </div>
+    <div class="fcf-form-group">
+        <label for="Message" class="fcf-label">Your message</label>
+        <div class="fcf-input-group">
+            <textarea id="Message" name="Message" class="fcf-form-control" rows="6" maxlength="3000" required></textarea>
+        </div>
+    </div>
+    <div class="fcf-form-group">
+        <button type="submit" id="fcf-button" class="fcf-btn fcf-btn-primary fcf-btn-lg fcf-btn-block">Send</button>
     </div>
 </body>
 </html>
